# idf-devtools

./: .gitignore  README.md  elf_archive.py  elf_archive_ext.py  flash-diff.sh  nvs_dump.py  peek_symbols.py  provision.py  pyproject.toml  rts.py  test_elf_archive.py
.github/workflows/: ci.yml
